--- a/ポートフォリオ_iwasawa/css/reset.css
+++ b/ポートフォリオ_iwasawa/css/reset.css
@@ -45,6 +45,14 @@ img {
   border: none;
 }
 
+button {
+  padding: 0;
+  border: none;
+  outline: none;
+  font: inherit;
+  color: inherit;
+  background: none
+}
 
 /* css変数 */
 :root {
